# clippilot

./: .env.example  .gitignore  CLAUDE.md  README.md  dump.rdb
backend/: .env.example  README.md  claude.md  pyproject.toml  pytest.ini
backend/backend/src/workers/: tasks.py
backend/migrations/: 001_add_oauth_configs_and_is_admin.sql  001_add_performance_indexes.sql  002_storage_buckets.md  README.md
backend/src/: config.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  admin.py  api_keys.py  auth.py  billing.py  channels.py  dashboard.py  jobs.py  metrics.py  templates.py  users.py  youtube.py
backend/src/api/v1/schemas/: youtube.py
backend/src/core/: cache.py  database.py  encryption.py  exceptions.py  redis_client.py  supabase.py
backend/src/core/ai/: __init__.py  metadata_service.py  openai_client.py  script_service.py  subtitle_service.py
backend/src/core/billing/: __init__.py  stripe_service.py
backend/src/core/media/: __init__.py  pexels_service.py
backend/src/core/security/: __init__.py  encryption.py
backend/src/core/youtube/: __init__.py  client.py  exceptions.py  search_service.py  transcript_service.py  transcription_service.py  utils.py  youtube_service.py
backend/src/middleware/: __init__.py  auth.py  error_handler.py  logging.py  rate_limit.py
backend/src/models/: __init__.py  api_key.py  base.py  channel.py  job.py  oauth_config.py  subscription.py  template.py  usage_log.py  user.py  webhook.py
backend/src/schemas/: __init__.py  auth.py  base.py  billing.py  channel.py  job.py  metrics.py  template.py  user.py
backend/src/services/: alert_service.py  auth_service.py  metrics_service.py  quota_service.py  subscription_service.py  template_service.py
backend/src/workers/: __init__.py  celery_app.py  generate.py  render.py  upload.py
backend/tests/api/v1/: test_jobs.py
backend/tests/core/ai/: test_metadata_service.py  test_script_service.py  test_subtitle_service.py
backend/tests/services/: test_auth_service.py  test_metrics_service.py  test_quota_service.py
docs/: API_KEYS_SETUP.md  CHANGELOG_API_KEYS.md  ClipMind_AI_Shorts_SaaS_Plan.md  SUPABASE_SETUP.md  clippilot.md  dashboard-improvements.md  testing-strategy.md  tubelens.md
frontend/: README.md  claude.md  (+5 more)
(+171 files in other folders)
